fixes gap in mobile view

--- a/static/style.css
+++ b/static/style.css
@@ -246,6 +246,10 @@ a:hover {
         display: none;
     }
 
+    .HiddenMenu ul {
+        gap: 0px;
+    }
+
 }
 
 @media(min-width: 1024px) {
